--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist",
     "dev": "cross-env NODE_ENV=development webpack --config build/webpack.dev.conf.js",
-    "build": "npm run clean && cross-env NODE_ENV=production webpack --config build/webpack.prod.conf.js"
+    "build": "node build/build.js"
   },
   "repository": {
     "type": "git",
@@ -20,29 +19,34 @@
   },
   "homepage": "https://github.com/aloneWang/webpack-multipage-demo#readme",
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "glob": "^7.1.4",
-    "vue": "^2.6.10",
-		"@babel/runtime": "^7.3.1"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.2.2",
-		"@babel/plugin-proposal-class-properties": "^7.3.4",
-		"@babel/plugin-proposal-decorators": "^7.3.0",
-		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"@babel/plugin-transform-runtime": "^7.2.0",
-		"@babel/preset-env": "^7.3.1",
-		"@vue/babel-helper-vue-jsx-merge-props": "^1.0.0-beta.2",
-		"@vue/babel-preset-jsx": "^1.0.0-beta.2",
-		"babel-loader": "^8.0.5",
-		"babel-plugin-component": "^1.1.1",
-		"cross-env": "^5.2.0",
-		"html-webpack-plugin": "^3.2.0",
-		"rimraf": "^2.6.3",
-		"vue-loader": "^15.6.0",
-		"webpack": "^4.29.0",
-		"webpack-cli": "^3.2.1",
-		"webpack-dev-server": "^3.1.14",
-    	"webpack-merge": "^4.2.1"
+    "vue": "^2.5.22",
+    "vue-template-compiler": "^2.5.22"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0-beta.2",
+    "@vue/babel-preset-jsx": "^1.0.0-beta.2",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-component": "^1.1.1",
+    "chalk": "^2.4.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "cross-env": "^5.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "ora": "^3.4.0",
+    "rimraf": "^2.6.3",
+    "vue-loader": "^15.6.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   }
-
 }
