--- a/package.json
+++ b/package.json
@@ -39,10 +39,16 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "ora": "^3.4.0",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.3",
+    "style-loader": "^1.0.0",
     "vue-loader": "^15.6.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
