--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/runtime": "^7.3.1",
     "glob": "^7.1.4",
+    "url-loader": "^2.1.0",
     "vue": "^2.5.22",
     "vue-template-compiler": "^2.5.22"
   },
